<resources>
    <string name="app_name">Online Pharmacy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_main">Online Pharmacy</string>


    <string name="address">No Address Available!</string>
    <string name="timing">No Time Available!</string>
    <string name="phone">No Phone Number Available!</string>
    <string name="caisse">No Convention Available!</string>
    <string name="facebook">No Facebook Page Available!</string>
    <string name="localisation">No Localisation Available!</string>

    <string name="ville">No City Available For Now!</string>

    <string name="input_nss">NSS code!</string>
    <string name="input_name">Name!</string>
    <string name="input_firstname">First Name!</string>
    <string name="input_address">Address!</string>
    <string name="input_phone_num">Phone Number!</string>
    <string name="input_password">Password!</string>

    <string name="btn_signup">Sign UP</string>
    <string name="btn_signin">Sign IN</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="ListPharmacies">List Pharmacies</string>
    <string name="NearestPharmacies">Nearest Pharmacies</string>
    <string name="MakeAnOrder">Make An Order</string>
    <string name="OnlinePharmacy">Online Pharmacy</string>
    <string name="connectedas">Connected as: %1$s</string>

    <string name="upload">upload</string>
    <string name="pickImage">Pick Image</string>
    <string name="preview">Image uploaded</string>

    <string name="status0">waiting</string>
    <string name="status1">ready</string>

    <string name="viewCommands">View My Commands</string>

</resources>
