<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".detailFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- TODO: Update blank fragment layout -->

        <TextView
                android:id="@+id/address_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="80dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="31dp"
                app:layout_constraintBottom_toTopOf="@+id/progressBar3" android:text="@string/address"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timing_detail"
                app:layout_constraintTop_toBottomOf="@+id/address_detail" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:layout_marginBottom="403dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="20dp" android:text="@string/timing"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/phone_num_detail"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/phone" android:visibility="visible"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/timing_detail" android:layout_marginTop="20dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/caisse_convention_detail"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/phone_num_detail"
                android:gravity="center"
                android:layout_marginTop="20dp" android:text="@string/caisse"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/facebook_detail"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/caisse_convention_detail"
                android:text="@string/facebook"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/localisation_detail"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/facebook_detail"
                android:layout_marginTop="20dp"
                android:text="@string/localisation"/>


        <Button
                android:text="@string/MakeAnOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/order" android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/localisation_detail" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="40dp"/>
        <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>