<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CommandFragment" android:id="@+id/scrollView2">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/pickImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:text="@string/pickImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/upload" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/pickImage"/>
        <ImageView
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/upload" android:contentDescription="@string/preview"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>